--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -24,7 +24,7 @@
                   <ul class="dropdown">
                       <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
                       <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
-                      <li class="link-dropdown" id="linkGrecoRomana"><a href="greco-romana.html">Greco-Romana</a></li>
+                      <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
                       <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                       <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
                       <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
@@ -32,7 +32,7 @@
                       <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
                   </ul>
               </li>
-              <li id="link-quiz"><a href="../paginas/grega.html">QUIZ GREGA</a></li>
+              <li id="link-quiz"><a href="../quiz/grega.html">QUIZ GREGA</a></li>
           </ul>
       </nav>
   </header>
@@ -153,7 +153,6 @@
         <ul>
           <li><a href="../paginas/index.html">Página Inicial</a></li>
           <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
-          <li><a href="../paginas/geral.html">Mitologias Gerais</a></li>
           <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
           <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
           <li><a href="../paginas/irlandesa.html">Mitologia Irlandesa</a></li>
