--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../paginas/css/egipcia.css" />
     <link rel="stylesheet" href="../paginas/css/style.css" />
+    <script src="../quiz/js/animacoes.js" defer></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,6 +21,25 @@
         ><img src="../../../back/imagens/LYJEK-teste.png" alt="" class="logo"
       /></a>
       <h1>EGÍPCIA</h1>
+      <nav>
+        <ul class="lista-nav">
+            <li id="link-home"><a href="../paginas/index.html">HOME</a></li>
+            <li>
+                <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
+                <ul class="dropdown">
+                    <li id="margin-top-dropdown"><a href="grega.html">Grega</a></li>
+                    <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
+                    <li class="link-dropdown" id="linkGrecoRomana"><a href="japonesa.html">Japonesa</a></li>
+                    <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
+                    <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
+                    <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
+                    <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
+                    <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
+                </ul>
+            </li>
+            <li id="link-quiz"><a href="../quiz/egipcia.html">QUIZ EGÍPCIA</a></li>
+        </ul>
+    </nav>
     </header>
     <div class="row">
       <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
@@ -206,7 +226,6 @@
           <ul>
             <li><a href="../paginas/index.html">Página Inicial</a></li>
             <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
-            <li><a href="../paginas/geral.html">Mitologias Gerais</a></li>
             <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
             <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
             <li><a href="../paginas/irlandesa.html">Mitologia Irlandesa</a></li>
