--- a/front/site/paginas/romana.html
+++ b/front/site/paginas/romana.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../paginas/css/romana.css" />
     <link rel="stylesheet" href="../paginas/css/style.css" />
+    <script src="../quiz/js/animacoes.js" defer></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,6 +18,25 @@
   <body>
     <header>
       <h1>ROMANA</h1>
+      <nav>
+        <ul class="lista-nav">
+            <li id="link-home"><a href="../paginas/index.html">HOME</a></li>
+            <li>
+                <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
+                <ul class="dropdown">
+                    <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
+                    <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
+                    <li class="link-dropdown" id="linkJaponesa"><a href="greco-romana.html">Japonesa</a></li>
+                    <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
+                    <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
+                    <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
+                    <li class="link-dropdown" id="linkGrega"><a href="grega.html">Grega</a></li>
+                    <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
+                </ul>
+            </li>
+            <li id="link-quiz"><a href="../quiz/romana.html">QUIZ ROMANA</a></li>
+        </ul>
+    </nav>
     </header>
     <div class="row">
       <div
@@ -109,7 +129,6 @@
           <ul>
             <li><a href="../paginas/index.html">Página Inicial</a></li>
             <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
-            <li><a href="../paginas/geral.html">Mitologias Gerais</a></li>
             <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
             <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
             <li><a href="../paginas/irlandesa.html">Mitologia Irlandesa</a></li>
