--- a/front/site/paginas/hindu.html
+++ b/front/site/paginas/hindu.html
@@ -27,12 +27,11 @@
               <ul class="dropdown">
                   <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
                   <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
-                  <li class="link-dropdown" id="linkGrecoRomana"><a href="greco-romana.html">Greco-Romana</a></li>
+                  <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
                   <li class="link-dropdown"id="linkGrega"><a href="grega.html">Grega</a></li>
                   <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
                   <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
                   <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
-                  <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
               </ul>
           </li>
           <li id="link-quiz"><a href="../quiz/hindu.html">QUIZ HINDU</a></li>
