--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -29,12 +29,11 @@
                 <ul class="dropdown">
                     <li id="margin-top-dropdown"><a href="grega.html">Grega</a></li>
                     <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
-                    <li class="link-dropdown" id="linkGrecoRomana"><a href="japonesa.html">Japonesa</a></li>
+                    <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
                     <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                     <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
                     <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
                     <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
-                    <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
                 </ul>
             </li>
             <li id="link-quiz"><a href="../quiz/egipcia.html">QUIZ EGÍPCIA</a></li>
