ajuste no footer

--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -222,7 +222,7 @@
           <img src="../../../back/imagens/LYJEK.png" alt="Logo do site" />
         </div>
         <div class="footer-links">
-          <ul>
+          <ul class="ul-footer">
             <li><a href="../paginas/index.html">Página Inicial</a></li>
             <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
             <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
@@ -237,7 +237,7 @@
           </ul>
         </div>
         <div class="footer-social">
-          <ul>
+          <ul class="ul-footer">
             <li>
               <a href="https://github.com/spricigom"><i>Emili</i></a>
             </li>
