--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -178,7 +178,7 @@
         <img src="../../../back/imagens/LYJEK.png" alt="Logo do site">
       </div>
       <div class="footer-links">
-        <ul>
+        <ul class="ul-footer">
           <li><a href="../paginas/index.html">Página Inicial</a></li>
           <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
           <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
@@ -191,7 +191,7 @@
         </ul>
       </div>
       <div class="footer-social">
-        <ul>
+        <ul class="ul-footer">
           <li><a href="https://github.com/spricigom"><i>Emili</i></a></li>
           <li><a href="https://github.com/Joaovictor23t4"><i>João</i></a></li>
           <li><a href="https://github.com/kauabarros-24"><i>Kauã</i></a></li>
