--- a/front/site/paginas/japonesa.html
+++ b/front/site/paginas/japonesa.html
@@ -217,7 +217,7 @@
         <img src="../../../back/imagens/LYJEK.png" alt="Logo do site" />
       </div>
       <div class="footer-links">
-        <ul>
+        <ul class="ul-footer">
           <li><a href="../paginas/index.html">Página Inicial</a></li>
           <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
           <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
@@ -230,7 +230,7 @@
         </ul>
       </div>
       <div class="footer-social">
-        <ul>
+        <ul class="ul-footer">
           <li>
             <a href="https://github.com/spricigom"><i>Emili</i></a>
           </li>
