--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -22,7 +22,7 @@
               <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
               <ul class="dropdown">
                   <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
-                  <li class="link-dropdown" id="linkGrega"><a href="grega.html">Grega</a></li>
+                  <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grega</a></li>
                   <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
                   <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                   <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
