--- a/front/site/paginas/nordica.html
+++ b/front/site/paginas/nordica.html
@@ -32,7 +32,7 @@
                     <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
                     <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                     <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
-                    <li class="link-dropdown" id="linkGrega"><a href="nordica.html">Grega</a></li>
+                    <li class="link-dropdown" id="linkGrecia"><a href="nordica.html">Grega</a></li>
                     <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
                 </ul>
             </li>
