--- a/front/site/paginas/romana.html
+++ b/front/site/paginas/romana.html
@@ -30,7 +30,7 @@
                     <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                     <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
                     <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
-                    <li class="link-dropdown" id="linkGrega"><a href="grega.html">Grega</a></li>
+                    <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grega</a></li>
                 </ul>
             </li>
             <li id="link-quiz"><a href="../quiz/romana.html">QUIZ ROMANA</a></li>
