--- a/front/site/quiz/grega.html
+++ b/front/site/quiz/grega.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 if (isset($_POST['submit'])) {
     include_once('config_php/config-front.php');
     $arrayContador = [];
@@ -43,7 +43,7 @@ if (isset($_POST['submit'])) {
 }
 
 
-?>
+?> -->
 
 <!DOCTYPE html>
 <html lang="pt-BR">
