--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -58,17 +58,11 @@
                 <p class="dificuldade">Nível Fácil</p>
             </div>
             <div class="alternativas">
-                <input type="radio" name="questao1" id="" value="errado">
-                <label>A - Odin</label>
-                <input type="radio" name="questao1" id="" value="errado">
-                <label> B - Loki</label>
-                <input type="radio" name="questao1" id="" value="certo">
-                <label> C - Thor</label>
-                <input type="radio" name="questao1" id="" value="errado"> D - Freyja
-                <label>D - Freyja</label>
-                <div class="buttonResponder">
-                    <input type="button" value="Responder" id="btnPergunta1">
-                </div>
+                <input type="radio" name="questao1" id="" value="errado"><label>A - Odin</label>
+                <input type="radio" name="questao1" id="" value="errado"><label> B - Loki</label>
+                <input type="radio" name="questao1" id="" value="certo"><label> C - Thor</label>
+                <input type="radio" name="questao1" id="" value="errado"><label>D - Freyja</label>
+                <div class="buttonResponder"><input type="button" value="Responder" id="btnPergunta1"></div>
             </div>
         </section>
 
@@ -108,16 +102,16 @@
             <div class="alternativas">
 
                 <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                <labe> A - Fenrir</label>
-                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                    <label> B - Sleipnir</label>
-                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                    <label>C - Jormungandr</label>
-                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="certo">
-                    <label>D - Skoll</label>
-                    <div class="buttonResponder">
-                        <input type="button" value="Responder" id="btnPergunta2">
-                    </div>
+                <label> A - Fenrir</label>
+                <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
+                <label> B - Sleipnir</label>
+                <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
+                <label>C - Jormungandr</label>
+                <input type="radio" name="questao2" class="tamanhoInputOriginal" value="certo">
+                <label>D - Skoll</label>
+                <div class="buttonResponder">
+                    <input type="button" value="Responder" id="btnPergunta2">
+                </div>
             </div>
         </section>
         <section id="secao-pergunta-3" class="secao-pergunta">
@@ -134,7 +128,7 @@
                 <label>B - Helheim</label>
                 <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado">
                 <label>C - Midgard</label>
-                <input type="radio" name="questao3" class="tamanhoInputOriginal" value="certo"> D - Asgard
+                <input type="radio" name="questao3" class="tamanhoInputOriginal" value="certo">
                 <label>D - Asgard</label>
 
                 <div class="buttonResponder">
@@ -150,20 +144,14 @@
                 <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
-
                 <input type="radio" name="questao4" class="tamanhoInputOriginal" value="certo">
                 <label>A - Odin (sabedoria), Thor (força), Freyja(amor)</label>
-
-                <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado"><label>B - Loki
-                (trapaça), Balder(beleza), Freyr(fertilidade)</label>
-
-                <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado"> 
+                <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
+                <label>B - Loki(trapaça), Balder(beleza), Freyr(fertilidade)</label>
+                <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
                 <label>C - Freyja (amor), Tyr(coragem), Heimdall(vigilância)</label>
-
-                <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado"> 
+                <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
                 <label>D - Odin(sabedoria), Freyja(amor), Thor(trovão)</label>
-                
-
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta4">
                 </div>
@@ -186,9 +174,9 @@
 
                 <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
                 <label> C - Uma serpente gigante que envolve o mundo; representa a destruição iminente</label>
-
                 <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
                 <label>D - Um pássaro mágico</label>
+
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta5">
                 </div>
@@ -202,22 +190,18 @@
             </div>
             <div class="alternativas">
 
-                <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado"> A - Mjölnir foi forjado
-                por Loki e usado
-                para criar trovões e relâmpagos.
+                <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
+                <label>A - Mjölnir foi forjado por Loki e usado para criar trovões e relâmpagos</label>
 
-                <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado"> B - Mjölnir foi roubado
-                por um gigante e
-                Thor teve que buscá-lo em uma jornada épica.
+                <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
+                <label>B - Mjölnir foi roubado por um gigante e Thor teve que buscá-lo em uma jornada épica.</label>
 
-                <input type="radio" name="questao6" class="tamanhoInputOriginal" value="certo"> C - Mjölnir foi
-                presenteado a Thor por Odin
-                e é capaz de derrotar os inimigos dos deuses.
+                <input type="radio" name="questao6" class="tamanhoInputOriginal" value="certo">
+                <label>C - Mjölnir foi presenteado a Thor por Odin e é capaz de derrotar os inimigos dos deuses.</label>
 
-                <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado"> D -Mjölnir é uma arma
-                lendária, mas não
-                desempenha um papel importante na mitologia nórdica.
-                </label>
+                <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
+                <label> D -Mjölnir é uma arma lendária, mas não desempenha um papel importante na mitologia
+                    nórdica.</label>
 
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta6">
@@ -233,22 +217,18 @@
             </div>
             <div class="alternativas">
 
-                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado"> A - Uma grande festa
-                dos deuses antes do
-                fim do mundo.
+                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
+                <label>A - Uma grande festa dos deuses antes do fim do mundo.</label>
 
-                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado"> B - Uma jornada de Thor
-                para resgatar seu
-                martelo Mjölnir do submundo.
+                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
+                <label> B - Uma jornada de Thor para resgatar seu martelo Mjölnir do submundo.</label>
 
-                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="certo"> C - Uma batalha final
-                entre os deuses e as
-                forças do caos, resultando na destruição do mundo.
+                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="certo">
+                <label> C - Uma batalha final entre os deuses e as forças do caos, resultando na destruição do
+                    mundo.</label>
 
-                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado"> D - D A ascensão de um
-                novo deus supremo
-                para governar os Nove Mundos.
-                </label>
+                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
+                <label>D - A ascensão de um novo deus supremo para governar os Nove Mundos.</label>
 
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta7">
@@ -258,27 +238,25 @@
         <section id="secao-pergunta-8" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 8:</h1>
-                <p class="pergunta">Explique o mito de Baldur e como sua morte afetou os deuses nórdicos.</p>
+                <p class="pergunta">Explique o mito de Baldur e como sua morte afetou os deuses nórdicos</p>
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
 
-                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado"> A - Baldur era um deus
-                da guerra que
-                morreu em batalha, enfraquecendo os deuses.
+                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
+                <label>A - Baldur era um deus da guerra que morreu em batalha, enfraquecendo os deuses</label>
 
-                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado"> B - Baldur era um deus
-                da beleza que se
-                apaixonou por uma mortal e morreu de tristeza.
+                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
+                <label> B - Baldur era um deus da beleza que se apaixonou por uma mortal e morreu de tristeza</label>
 
-                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="certo"> C - Baldur era imortal,
-                e sua morte foi uma
-                surpresa para os deuses, que ficaram abalados.
+                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="certo">
+                <label> C - Baldur era imortal, e sua morte foi uma surpresa para os deuses, que ficaram
+                    abalados</label>
 
-                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado"> D - Baldur era um deus
-                amado cuja morte
-                levou a uma série de eventos que levaram ao Ragnarök.
-                </label>
+                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
+                <label>D - Baldur era um deus amado cuja morte levou a uma série de eventos que levaram ao
+                    Ragnarök</label>
+
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta8">
                 </div>
@@ -288,28 +266,22 @@
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 9:</h1>
                 <p class="pergunta">Quem é a valquíria mais famosa da mitologia nórdica e qual é o seu papel nas
-                    histórias?
-                </p>
+                    histórias?</p>
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
 
-                <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado"> A - A Hela, a deusa da
-                morte, que conduz
-                as almas para o Valhalla.
+                <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado">
+                <label>A - A Hela, a deusa da morte, que conduz as almas para o Valhalla</label>
 
-                <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado"> B - Freyja, a deusa do
-                amor, que traz
-                felicidade aos guerreiros caídos.
+                <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado">
+                <label>B - Freyja, a deusa do amor, que traz felicidade aos guerreiros caídos</label>
 
-                <input type="radio" name="questao9" class="tamanhoInputOriginal" value="certo"> C - Sigrdrífa, a
-                valquíria que desperta o
-                herói Sigurd e o ajuda em suas aventuras.
+                <input type="radio" name="questao9" class="tamanhoInputOriginal" value="certo">
+                <label>C - Sigrdrífa, a valquíria que desperta o herói Sigurd e o ajuda em suas aventuras</label>
 
-                <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado"> D - Brynhild, a
-                valquíria que cai em
-                desgraça e é aprisionada em uma torre de fogo.
-                </label>
+                <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado">
+                <label>D - Brynhild, a valquíria que cai em desgraça e é aprisionada em uma torre de fogo</label>
 
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta9">
@@ -324,23 +296,17 @@
             </div>
             <div class="alternativas">
 
-                <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado"> A - Os vikings
-                rejeitaram completamente a
-                mitologia nórdica em favor de outras crenças
-
-                <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado"> B - Os vikings
-                abandonaram suas próprias
-                crenças em favor do cristianismo e não foram influenciados pela mitologia.
-
-                <input type="radio" name="questao10" class="tamanhoInputOriginal" value="certo"> C - A mitologia nórdica
-                inspirou a arte, a
-                poesia e as sagas vikings, refletindo valores e crenças culturais.
-
-                <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado"> D - mitologia nórdica
-                não teve impacto
-                significativo na cultura viking; eles eram mais pragmáticos e guerreiros do que preocupados com a
-                mitologia.
-                </label>
+                <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado">
+                <label>A - Os vikings rejeitaram completamente a mitologia nórdica em favor de outras crenças</label>
+                <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado">
+                <label>B - Os vikings abandonaram suas própriascrenças em favor do cristianismo e não foram
+                    influenciados pela mitologia</label>
+                <input type="radio" name="questao10" class="tamanhoInputOriginal" value="certo">
+                <label>C - A mitologia nórdica inspirou a arte, a poesia e as sagas vikings, refletindo valores e
+                    crenças culturais</label>
+                <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado">
+                <label>D - A mitologia nórdica não teve um impacto significativo na cultura viking; eles eram mais
+                    pragmáticos e guerreiros do que preocupados com a mitologia</label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta10">
                 </div>
