--- a/front/site/quiz/greco-romana.html
+++ b/front/site/quiz/greco-romana.html
@@ -104,9 +104,9 @@
                 <label>A - Ares</label>
                 <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
                 <label>B - Plutão</label>
-                <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                <label>C - Cupido</label>
                 <input type="radio" name="questao2" class="tamanhoInputOriginal" value="certo">
+                <label>C - Cupido</label>
+                <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
                 <label>D - Hermes</label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta2">
@@ -126,9 +126,9 @@
                 <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado">
                 <label>B - Deméter</label>
                 <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado">
-                <label>C - Midgard</label>
+                <label>C - Ártemis</label>
                 <input type="radio" name="questao3" class="tamanhoInputOriginal" value="certo">
-                <label>D - Asgard</label>
+                <label>D - Vênus</label>
 
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta3">
@@ -138,19 +138,18 @@
         <section id="secao-pergunta-4" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 4</h1>
-                <p class="pergunta">Quem são os três deuses mais importantes da mitologia nórdica e quais são suas
-                    características distintas?</p>
+                <p class="pergunta">Qual é o mito da fundação de Roma na mitologia romana e quem são os irmãos gêmeos envolvidos?</p>
                 <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
                 <input type="radio" name="questao4" class="tamanhoInputOriginal" value="certo">
-                <label>A - Odin (sabedoria), Thor (força), Freyja(amor)</label>
+                <label>A - Rômulo e Remo; foram amamentados por uma loba</label>
                 <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
-                <label>B - Loki(trapaça), Balder(beleza), Freyr(fertilidade)</label>
+                <label>B - Júlio e Augusto; construíram a cidade de Roma</label>
                 <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
-                <label>C - Freyja (amor), Tyr(coragem), Heimdall(vigilância)</label>
+                <label>C - Hércules e Aquiles; derrotaram os fundadores originais de Roma</label>
                 <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
-                <label>D - Odin(sabedoria), Freyja(amor), Thor(trovão)</label>
+                <label>D - Zeus e Hera; fundaram Roma com a ajuda de outros deuses.</label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta4">
                 </div>
@@ -160,21 +159,21 @@
         <section id="secao-pergunta-5" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 5:</h1>
-                <p class="pergunta">O que é o Yggdrasil e qual é o seu significado na mitologia nórdica?</p>
+                <p class="pergunta">Quais são os nomes das três Moiras que controlam o destino dos mortais na mitologia greco-romana?</p>
                 <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
 
                 <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
-                <label> A - Uma espada mágica: Representa o poder dos deuses</label>
+                <label>A - Ceres, Vênus e Diana</label>
+
+                <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
+                <label>B - Nona, Decima e Morta</label>
 
                 <input type="radio" name="questao5" class="tamanhoInputOriginal" value="certo">
-                <label>B - Uma árvore cósmica que conecta os Nove Mundos; simboliza a ordem do universo</label>
-
+                <label>C - Cloto, Láquesis e Átropos</label>
                 <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
-                <label> C - Uma serpente gigante que envolve o mundo; representa a destruição iminente</label>
-                <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
-                <label>D - Um pássaro mágico</label>
+                <label>D - Júpiter, Marte e Netuno</label>
 
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta5">
@@ -184,24 +183,22 @@
         <section id="secao-pergunta-6" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 6:</h1>
-                <p class="pergunta">Qual é a história do Martelo Mjölnir, arma de Thor, e por que é tão famoso?</p>
+                <p class="pergunta">Qual é o mito de Orfeu e Eurídice na mitologia greco-romana, e qual foi o trágico destino do casal?</p>
                 <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
 
                 <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
-                <label>A - Mjölnir foi forjado por Loki e usado para criar trovões e relâmpagos</label>
+                <label>A - Orfeu era um herói que realizou grandes feitos</label>
 
                 <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
-                <label>B - Mjölnir foi roubado por um gigante e Thor teve que buscá-lo em uma jornada épica.</label>
+                <label>B - Orfeu era um deus que se apaixonou por uma mortal</label>
 
                 <input type="radio" name="questao6" class="tamanhoInputOriginal" value="certo">
-                <label>C - Mjölnir foi presenteado a Thor por Odin e é capaz de derrotar os inimigos dos deuses.</label>
+                <label>C - Orfeu era um poeta que desceu ao submundo para resgatar sua amada Eurídice, mas perdeu-a novamente por olhar para trás antes de sair</label>
 
                 <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
-                <label> D -Mjölnir é uma arma lendária, mas não desempenha um papel importante na mitologia
-                    nórdica.</label>
-
+                <label>D - Era um adivinho que previu o futuro com precisão</label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta6">
                 </div>
@@ -210,21 +207,19 @@
         <section id="secao-pergunta-7" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 7:</h1>
-                <p class="pergunta"> Quais são os eventos principais que ocorrem durante o Ragnarök na mitologia
-                    nórdica?</p>
+                <p class="pergunta">Qual é a história da Titanomaquia na mitologia grega e como os deuses olímpicos derrotaram os titãs?</p>
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
 
                 <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
-                <label>A - Uma grande festa dos deuses antes do fim do mundo.</label>
+                <label>A - Os titãs eram deuses menores que se rebelaram contra os olímpicos, mas foram derrotados em uma grande batalha</label>
 
                 <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
-                <label> B - Uma jornada de Thor para resgatar seu martelo Mjölnir do submundo.</label>
+                <label>B - Os titãs eram deuses mais poderosos que governaram o Olimpo antes dos olímpicos; foram convencidos a se retirar pacificamente</label>
 
                 <input type="radio" name="questao7" class="tamanhoInputOriginal" value="certo">
-                <label> C - Uma batalha final entre os deuses e as forças do caos, resultando na destruição do
-                    mundo.</label>
+                <label></label>
 
                 <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
                 <label>D - A ascensão de um novo deus supremo para governar os Nove Mundos.</label>
