--- a/front/site/quiz/greco-romana.html
+++ b/front/site/quiz/greco-romana.html
@@ -212,17 +212,17 @@
             </div>
             <div class="alternativas">
 
-                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
+                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="certo">
                 <label>A - Os titãs eram deuses menores que se rebelaram contra os olímpicos, mas foram derrotados em uma grande batalha</label>
 
                 <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
                 <label>B - Os titãs eram deuses mais poderosos que governaram o Olimpo antes dos olímpicos; foram convencidos a se retirar pacificamente</label>
 
-                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="certo">
-                <label></label>
+                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
+                <label>C - Os titãs e os olímpicos formaram uma aliança para enfrentar ameaças externas</label>
 
                 <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
-                <label>D - A ascensão de um novo deus supremo para governar os Nove Mundos.</label>
+                <label>D - Os olímpicos pediram ajuda a outras divindades para derrotar os titãs</label>
 
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta7">
