--- a/front/site/quiz/greco-romana.html
+++ b/front/site/quiz/greco-romana.html
@@ -232,24 +232,22 @@
         <section id="secao-pergunta-8" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 8:</h1>
-                <p class="pergunta">Explique o mito de Baldur e como sua morte afetou os deuses nórdicos</p>
+                <p class="pergunta">Explique o mito de Prometeu e como ele trouxe o fogo para os humanos</p>
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
 
-                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
-                <label>A - Baldur era um deus da guerra que morreu em batalha, enfraquecendo os deuses</label>
-
-                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
-                <label> B - Baldur era um deus da beleza que se apaixonou por uma mortal e morreu de tristeza</label>
-
                 <input type="radio" name="questao8" class="tamanhoInputOriginal" value="certo">
-                <label> C - Baldur era imortal, e sua morte foi uma surpresa para os deuses, que ficaram
-                    abalados</label>
+                <label>A - Prometeu roubou o fogo de Zeus e o deu aos humanos em uma tocha</label>
 
                 <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
-                <label>D - Baldur era um deus amado cuja morte levou a uma série de eventos que levaram ao
-                    Ragnarök</label>
+                <label>B - Prometeu fez um trato com os deuses para trazer o fogo do Monte Olimpo aos humanos</label>
+
+                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
+                <label>C - Prometeu inventou o fogo e ensinou os humanos a utilizá-lo</label>
+
+                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
+                <label>D - Prometeu pediu a Hefesto que lhe trouxesse o fogo do submundo para os humanos</label>
 
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta8">
@@ -259,23 +257,22 @@
         <section id="secao-pergunta-9" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 9:</h1>
-                <p class="pergunta">Quem é a valquíria mais famosa da mitologia nórdica e qual é o seu papel nas
-                    histórias?</p>
+                <p class="pergunta">Quem é Teseu e quais são suas aventuras mais notáveis na mitologia grega?</p>
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
 
                 <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado">
-                <label>A - A Hela, a deusa da morte, que conduz as almas para o Valhalla</label>
+                <label>A - Teseu era um guerreiro troiano que lutou na Guerra de Troia</label>
 
                 <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado">
-                <label>B - Freyja, a deusa do amor, que traz felicidade aos guerreiros caídos</label>
+                <label>B - Teseu era um músico talentoso que encantou os deuses com sua música</label>
 
                 <input type="radio" name="questao9" class="tamanhoInputOriginal" value="certo">
-                <label>C - Sigrdrífa, a valquíria que desperta o herói Sigurd e o ajuda em suas aventuras</label>
+                <label>C - Teseu era um herói ateniense que derrotou o Minotauro e participou da busca pelo Velocino de Ouro</label>
 
                 <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado">
-                <label>D - Brynhild, a valquíria que cai em desgraça e é aprisionada em uma torre de fogo</label>
+                <label>D - Teseu era um filósofo grego famoso por suas ideias sobre a natureza</label>
 
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta9">
@@ -285,7 +282,7 @@
         <section id="secao-pergunta-10" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 10:</h1>
-                <p class="pergunta">Como a mitologia nórdica influenciou a cultura viking e suas crenças religiosas?</p>
+                <p class="pergunta"></p>
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
