--- a/front/site/quiz/romana.html
+++ b/front/site/quiz/romana.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css-quiz/animations-css/romana.css">
-    <script src="js/animacoes.js" defer></script>
+    <script src="js/quiz.js" defer></script>
     <script src="js/quiz.js" defer></script>
     <title>Quiz Roma</title>
 </head>
@@ -18,9 +18,9 @@
                     <ul class="dropdown">
                         <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
                         <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grécia</a></li>
-                        <li class="link-dropdown" id="linkGrecoRomana"><a href="greco-romana.html">Greco-Romana</a></li>
                         <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                         <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
+                        <li class="link-dropdown" id="linkGrecoRomana"><a href="japonesa.html">Japonesa</a></li>
                         <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
                         <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
                         <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
