--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -5,78 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Site SEPE</title>
+  <link rel="stylesheet" href="../paginas/css/egipcia.css">
+  <link rel="stylesheet" href="../paginas/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      padding:20px 80px;
-    }
-
-    header {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-    }
-
-    nav {
-      display: flex;
-      align-items: center;
-    }
-
-    .d-flex>input,
-    button {
-      padding: 0;
-    }
-
-    nav>ul {
-      display: flex;
-      align-items: center;
-      gap: 30px;
-      list-style: none;
-      font-family: Arial, Helvetica, sans-serif;
-      font-weight: 600;
-    }
-
-    .d-flex {
-      display: flex;
-      padding: 25px;
-    }
-
-    .card {
-      padding: 6px;
-      border: none;
-      box-shadow: 0 3px 5px 0 rgba(0, 1, 1, .1);
-      height: 100%;
-    }
-
-    .main-banner{
-      height: 350px;
-      background: rgb(3,0,57);
-      background: linear-gradient(90deg, rgba(3,0,57,1) 0%, rgba(17,17,17,1) 45%, rgba(46,100,111,1) 100%);
-      color: aliceblue;
-      text-align: center;
-      display: flex;
-      text-align: center;
-      justify-content: center;
-
-
-    }
-
-    .main-banner h1, .main-banner p{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    }
-
-    .main-banner > p{
-    }
-
-  </style>
 </head>
 
 
