header concertado e pradronizado

--- a/front/site/paginas/japonesa.html
+++ b/front/site/paginas/japonesa.html
@@ -12,6 +12,9 @@
   <title>Japonesa | SEPE</title>
 </head>
 <header>
+  <a href="../paginas/index.html" id="logo"
+  ><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"
+/></a>
   <h1>MITOLOGIA JAPONESA</h1>
   <nav>
     <ul class="lista-nav">
