--- a/front/site/paginas/romana.html
+++ b/front/site/paginas/romana.html
@@ -17,6 +17,9 @@
 
   <body>
     <header>
+      <a href="../paginas/index.html" id="logo"
+      ><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"
+    /></a>
       <h1>ROMANA</h1>
       <nav>
         <ul class="lista-nav">
