--- a/front/site/quiz/greco-romana.html
+++ b/front/site/quiz/greco-romana.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css-quiz/animations-css/nordica.css">
+    <link rel="stylesheet" href="css-quiz/animations-css/greco-romana.css">
     <script src="js/animacoes.js" defer></script>
     <script src="js/Kauã.js" defer></script>
-    <title>Quiz Nórdica</title>
+    <title>Quiz Greco-Romana</title>
 </head>
 
 <body>
