--- a/front/site/quiz/greco-romana.html
+++ b/front/site/quiz/greco-romana.html
@@ -282,7 +282,7 @@
         <section id="secao-pergunta-10" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 10:</h1>
-                <p class="pergunta"></p>
+                <p class="pergunta">Como é retratado o mito de Édipo em tragédias gregas como a de Sófocles?</p>
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
