--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -135,7 +135,7 @@
       Na viagem de volta, os argonautas precisaram atravessar a região onde viviam as sereias, criaturas metade mulher e metade peixe que atraíam os marinheiros para a morte com seu belo canto. O canto de Orfeu era mais belo, e graças à arte do grande poeta os argonautas conseguiram resistir às sereias e voltar a Tessália.</p>
       <p>Jasão foi viver em Corinto com Medéia, com quem teve muitos filhos. No entanto, abandona Medéia para desposar Creúsa, filha de Creonte. Indignada, Medéia matou Creúsa e os próprios filhos que tivera com Jasão.</p>
       <div class="botao">
-        <a href="../quiz/grega.html"><input type="button" value="COMEÇAR" id="btnComecar"></a>
+        <a href="../quiz/grega.php"><input type="button" value="COMEÇAR" id="btnComecar"></a>
       </div>
     </div>
     <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
