sei la o que ta acontecendo

--- a/front/site/paginas/japonesa.html
+++ b/front/site/paginas/japonesa.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../paginas/css/greco-romana.css" />
+  <link rel="stylesheet" href="../paginas/css/japonesa.css" />
   <link rel="stylesheet" href="../paginas/css/style.css" />
   <script src="../quiz/js/animacoes.js" defer></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,6 +12,9 @@
   <title>Japonesa | SEPE</title>
 </head>
 <header>
+  <a href="../paginas/index.html" id="logo"
+  ><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"
+/></a>
   <h1>MITOLOGIA JAPONESA</h1>
   <nav>
     <ul class="lista-nav">
