--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -9,11 +9,14 @@
   <script src="../quiz/js/animacoes.js" defer></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <title>Fenicia | SEPE</title>
+  <title>Irlandesa | SEPE</title>
 </head>
 
 <body>
   <header>
+    <a href="../paginas/index.html" id="logo"
+    ><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"
+  /></a>
     <h1>IRLANDESA</h1>
     <nav>
       <ul class="lista-nav">
