index.html alterado para index.php

--- a/front/site/paginas/romana.html
+++ b/front/site/paginas/romana.html
@@ -17,13 +17,13 @@
 
   <body>
     <header>
-      <a href="../paginas/index.html" id="logo"
+      <a href="../paginas/index.php" id="logo"
       ><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"
     /></a>
       <h1>ROMANA</h1>
       <nav>
         <ul class="lista-nav">
-            <li id="link-home"><a href="../paginas/index.html">HOME</a></li>
+            <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
             <li>
                 <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
                 <ul class="dropdown">
@@ -129,7 +129,7 @@
         </div>
         <div class="footer-links">
           <ul class="ul-footer">
-            <li><a href="../paginas/index.html">Página Inicial</a></li>
+            <li><a href="../paginas/index.php">Página Inicial</a></li>
             <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
             <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
             <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
