--- a/front/site/paginas/mesopotamica.html
+++ b/front/site/paginas/mesopotamica.html
@@ -15,13 +15,13 @@
 <body>
     <header>
       <div class="logo">
-      <a href="../paginas/index.html" id="logo"
+      <a href="../paginas/index.php" id="logo"
       ><img src="../../../back/imagens/LYJEK-teste.png" alt="" class="logo"
     /></a></div>
       <h1>MESOPOTÂMICA</h1>
       <nav>
         <ul class="lista-nav">
-            <li id="link-home"><a href="../paginas/index.html">HOME</a></li>
+            <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
             <li>
                 <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
                 <ul class="dropdown">
@@ -88,7 +88,7 @@
           </div>
           <div class="footer-links">
             <ul class="ul-footer">
-              <li><a href="../paginas/index.html">Página Inicial</a></li>
+              <li><a href="../paginas/index.php">Página Inicial</a></li>
               <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
               <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
               <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
